<resources>
    <string name="app_name">My Note</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="err_get_note_failed">Unknown error occurred</string><!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title_hint">Insert your title</string>
    <string name="text_description_hint">Insert your description</string>
    <string name="alarm">alarm</string>
    <string name="menu_image_title">Image</string>
    <string name="menu_audio_title">Audio</string>
    <string name="menu_location_title">Location</string>
    <string name="menu_task_title">Task</string>
    <string name="button_audio_title">Audio</string>
    <string name="tool_bar_title">Note</string>
    <string name="button_add_to_widget">Add to \nwidget</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="msg_delete_note_success">Delete note success !!!</string>
    <string name="audio_load_fail">Play audio failed ! Please try again</string>
    <string name="audio_title">Audio :</string>
    <string name="alarm_content">-- at&#160;</string>
    <string name="location_content">on %s</string>
    <string name="char_percent">%</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="text_description">description</string>
    <string name="text_title">Title</string>
    <string name="text_location">Location</string>
    <string name="text_audio_record">Audio Record</string>
    <string name="permission_granted_fail">You must granted permission for this option !</string>
    <string name="button_gallery_title">Gallery</string>
    <string name="button_create_new_file">Create</string>
    <string name="error_system_busy">The system is busy. Please try again !</string>
    <string name="location_insert_hint">Insert your location</string>
    <string name="location_submit">OK</string>
    <string name="button_get_curent_location_title">Get current location</string>
    <string name="message_turn_on">Turn on GPS please !</string>
    <string name="message_turn_on_internet">Turn on internet please !</string>
    <string name="error_location_null">Location must not null . Please insert your location</string>
    <string name="msg_update_task">Update Task </string>
    <string name="msg_delete_task">Delete Task </string>
    <string name="msg_success"> success !!!</string>
    <string name="button_cancle_title">Cancel</string>
    <string name="button_submit_cancel">Ok</string>
    <string name="channel_name">note_channel</string>
    <string name="channel_description">This is channel of note</string>
    <string name="note_save_success">Save note success</string>
    <string name="error_save_data_failed">The system is busy. Please try again later !</string>
    <string name="message_save_data_success">Save data success !</string>
    <string name="title_delete_dialog">Confirm Delete note!</string>
    <string name="msg_delete_note_dialog">You are about to delete Note records of database. Do you really want to proceed ?</string>
    <string name="msg_delete_task_dialog">You are about to delete Task records of database. Do you really want to proceed ?</string>
    <string name="button_positive">Yes</string>
    <string name="button_negative">No</string>
    <string name="title_delete_task_dialog">Confirm delete Task!</string>
    <string name="msg_changed_mind_delete_note_record">You\'ve changed your mind to delete Note record!!!</string>
    <string name="msg_changed_mind_delete_task_record">You\'ve changed your mind to delete task record!!!</string>
    <string name="button_audio_storage">Storage</string>
    <string name="text_time_default">00:00</string>
    <string name="error_recoding_audio">Record audio failed. Please try again later !</string>
    <string name="message_record_audio_succes">Audio is recorded. Do you want to save ?</string>
    <string name="button_save_title">Save</string>
    <string name="button_cancel_title">Cancel</string>
    <string name="message_recording">Recording</string>
    <string name="message_save_note_success">Save note success !</string>
    <string name="note_title_is_empty">The title is not empty !</string>
    <string name="task_title_default">Insert your title</string>
</resources>
