<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_yellow"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/image_content_widget"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp_8" />

    <TextView
        android:id="@+id/text_title_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_content_widget"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/text_title"
        android:textColor="@color/color_light_gray"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/text_description_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title_widget"
        android:paddingLeft="@dimen/dp_8"
        android:text="@string/text_description"
        android:textColor="@color/color_light_gray" />

    <ListView
        android:id="@+id/listview_task_widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        android:layout_below="@id/text_description_widget" />

    <TextView
        android:id="@+id/text_note_location_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listview_task_widget"
        android:padding="@dimen/dp_8"
        android:text="@string/text_location" />

    <TextView
        android:id="@+id/text_note_audio_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_note_location_widget"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/text_audio_record" />

    <ImageView
        android:id="@+id/image_audio_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_note_location_widget"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_toEndOf="@id/text_note_audio_widget"
        android:src="@drawable/ic_volume_up_black_24dp" />
</RelativeLayout>
