<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="location"
            type="framgia.com.mynote.screen.edit.dialog.LocationChooserDialog" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <framgia.com.mynote.utils.LinedEditText
            android:id="@+id/edit_location"
            style="@style/TextShowInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_4"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:hint="@string/location_insert_hint"
            app:layout_constraintBottom_toTopOf="@+id/button_get_current_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_get_current_location"
            style="@style/ButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:onClick="@{()->location.onSubmitLocation()}"
            android:text="@string/location_submit"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_location_submit"
            app:layout_constraintTop_toBottomOf="@+id/edit_location" />

        <Button
            android:id="@+id/button_location_submit"
            style="@style/ButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:onClick="@{()-> location.onGetCurrentLocation()}"
            android:text="@string/button_get_curent_location_title"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/button_get_current_location"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_location" />

    </android.support.constraint.ConstraintLayout>
</layout>
