<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_add_to_widget"
            style="@style/CardViewItemNote"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_edit"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_light_green"
                android:gravity="center"
                android:text="@string/button_add_to_widget"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_edit"
            style="@style/CardViewItemNote"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_delete"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_light_orange"
                android:gravity="center"
                android:text="@string/button_edit"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_delete"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            app:cardCornerRadius="@dimen/dp_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_light_red"
                android:gravity="center"
                android:text="@string/button_delete"
                android:textColor="@android:color/white"
               />
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>
