<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="media"
            type="framgia.com.mynote.screen.edit.MediaNoteUpdate" />

        <variable
            name="viewModel"
            type="framgia.com.mynote.screen.edit.NoteUpdateViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tool_bar_include"
            layout="@layout/tool_bar" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar_include">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

                <EditText
                    android:id="@+id/text_note_title"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@android:color/transparent"
                    android:hint="@string/note_title_hint"
                    android:text="@{viewModel.title}"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginStart="@dimen/dp_4"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginEnd="@dimen/dp_4"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="@id/text_note_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_note_title" />

                <framgia.com.mynote.utils.LinedEditText
                    android:id="@+id/text_note_description"
                    style="@style/TextShowDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_4"
                    android:gravity="top"
                    android:hint="@string/text_description_hint"
                    android:maxLength="500"
                    android:text="@{viewModel.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <FrameLayout
                    android:id="@+id/frame_tasks"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:visibility="@{safeUnbox(viewModel.hasTask) == 1 ? View.INVISIBLE : View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_note_description" />

                <TextView
                    android:id="@+id/text_note_alarm"
                    style="@style/TextShowInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:visibility="@{safeUnbox(viewModel.time) > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame_tasks"
                    app:setDate="@{safeUnbox(viewModel.time)}" />

                <TextView
                    android:id="@+id/text_note_location"
                    style="@style/TextShowInformation"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:text="@{@string/location_content(viewModel.location)}"
                    android:visibility="@{viewModel.location != null ? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_note_alarm"
                    app:layout_constraintTop_toBottomOf="@+id/frame_tasks"
                    bind:style="@style/TextShowInformation" />

                <TextView
                    android:id="@+id/text_note_audio"
                    style="@style/TextShowInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/audio_title"
                    android:visibility="@{viewModel.audio != null ? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_note_location" />

                <ImageButton
                    android:id="@+id/image_button_speaker"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_4"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@android:color/white"
                    android:onClick="@{(path)-> media.playAudio(viewModel.audio)}"
                    android:src="@drawable/ic_speaker_on"
                    android:visibility="@{viewModel.audio != null ? View.VISIBLE : View.INVISIBLE}"
                    app:layout_constraintStart_toEndOf="@+id/text_note_audio"
                    app:layout_constraintTop_toBottomOf="@+id/text_note_location" />

                <ImageView
                    android:id="@+id/image_note"
                    imageUrl="@{viewModel.image}"
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_150"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:visibility="@{viewModel.image == null ? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_button_speaker" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:itemBackground="@android:color/holo_orange_dark"
            app:itemIconTint="@android:color/white"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation" />

    </android.support.constraint.ConstraintLayout>

</layout>
